# markdoll

./: .editorconfig  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  rustfmt.toml  spec.doll
src/: diagnostics.rs  lib.rs  main.rs  typemap.rs
src/emit/: html.rs  mod.rs
src/ext/: code.rs  common.rs  danger.rs  emitters.rs  formatting.rs  links.rs  mod.rs  table.rs
src/tests/: mod.rs
src/tree/: mod.rs  parser.rs
tests/: parses_own_spec.rs
