[package]
name = "markdoll"
version = "3.0.3"
authors = ["0x57e11a"]
edition = "2021"
description = "a structured and extensible markup language"
readme = "README.md"
repository = "https://codeberg.org/0x57e11a/markdoll"
rust-version = "1.86"
license = "MIT"
keywords = ["markup"]
categories = ["compilers", "no-std", "parser-implementations", "visualization"]

[dependencies]
html-escape = "0.2.13"
tracing = "0.1"
tyfling = "0.1.1"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
spanner = { path = "../spanner", features = ["miette"] }
hashbrown = "0.15.2"
clap = { version = "4.5.35", features = ["derive"] }

tracing-subscriber = { version = "0.3.19", optional = true }
tracing-fancytree = { version = "0.1.0", optional = true }

[features]
default = []
cli-trace = ["dep:tracing-subscriber", "dep:tracing-fancytree"]

[[bin]]
name = "markdoll"